<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GoProControlOldActivity"
    tools:showIn="@layout/activity_go_pro_control_old">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/ctrl_loadingLayout">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctrl_loadingCamera"
            android:id="@+id/ctrl_loadingCamera"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:id="@+id/ctrl_mainControls">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="218.75dp"
            android:id="@+id/imageView2"
            android:minWidth="350dp"
            android:minHeight="218.75dp"
            android:src="@drawable/broken_image"
            android:contentDescription="@string/ctrl_imageDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/null_text"
            android:id="@+id/ctrl_batteryLevel"
            android:layout_gravity="right" />
    </LinearLayout>
</RelativeLayout>
